# iborker

./: .envrc  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.beads/: issues.jsonl
branding/: cli-splash.txt  icon.txt  minimal-no-unicode.txt
openspec/: project.md
openspec/changes/add-client-id-management/: proposal.md  tasks.md
openspec/changes/add-client-id-management/specs/ib-connection/: spec.md
openspec/changes/add-guardrails-mode/: design.md  proposal.md  tasks.md
openspec/changes/add-guardrails-mode/specs/guardrails-mode/: spec.md
openspec/changes/add-roll-detection/: design.md  proposal.md  tasks.md
openspec/changes/add-roll-detection/specs/roll-detection/: spec.md
openspec/changes/enhance-trader-ui/: proposal.md  tasks.md
openspec/changes/enhance-trader-ui/specs/click-trader/: spec.md
src/iborker/: __init__.py  cli.py  client_id.py  config.py  connection.py  contracts.py  guardrails.py  history.py  journal.py  roll.py  stdev.py  trader.py  trading_guard.py
tests/: conftest.py  test_guardrails.py
