[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iborker"]

[tool.hatch.build.targets.wheel.force-include]
"src/iborker/icon-32.png" = "iborker/icon-32.png"
"src/iborker/icon-64.png" = "iborker/icon-64.png"

[project]
name = "iborker"
version = "0.1.0"
description = "CLI and GUI tools for Interactive Brokers futures trading"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ib_insync>=0.9.86",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "dearpygui>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
iborker = "iborker.cli:app"
iborker-trader = "iborker.trader:main"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
